--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         }
         @media (max-width: 768px) {
             .camera-wrapper {
-                border-width: 20px;
+                border: 20px solid white;
             }
             .cny-decorations {
             width: 50px;
@@ -184,15 +184,15 @@
 
 <body>
     <div class="decoration" style="top: -15px; left: 50%; transform: translateX(-50%); display: flex; align-items: center; justify-content: center; gap: 1rem; width: auto">
-        <p class="cny-text text-2xl hidden md:block" style="margin: 0">晓萦和保任祝福大家</p>
+        <p class="cny-text text-xl hidden md:block" style="margin: 0">晓萦和保任祝福大家</p>
         <img src="img/lantern.gif" class="cny-lantern">
-        <p class="cny-text text-2xl hidden md:block" style="margin: 0">乙巳年财神到赚大钱</p>
+        <p class="cny-text text-xl hidden md:block" style="margin: 0">乙巳年财神到赚大钱</p>
     </div>
     
   
     <img src="img/lion-dance-unscreen.gif" class="decoration cny-lion" style="bottom: 0px; left: 50%; transform: translateX(-50%)">
     
-    <div class="fixed top-0 left-1/2 transform -translate-x-1/2 w-11/12 max-w-md mt-6 card">
+    <div class="fixed top-2 left-1/2 transform -translate-x-1/2 w-11/12 max-w-md mt-6 card">
         <div class="cny-container text-center">
             <div class="flex justify-between items-center mb-4">
                 <img src="img/fire-cracker-unscreen.gif" class="cny-decorations">
