--- a/index.html
+++ b/index.html
@@ -66,8 +66,6 @@
         .camera-wrapper {
             border: 60px solid white;
             overflow: hidden;
-            width: 100%;
-            position: relative;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
         }
         .cny-decorations {
@@ -81,7 +79,8 @@
         }
         @media (max-width: 768px) {
             .camera-wrapper {
-                border: 0px solid white;
+                border: none !important;
+                box-shadow: none!important;
             }
             .cny-decorations {
             width: 50px;
