#NA Update layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </h1>
               <br />
               <h3 class="mb-4 cny-text text-xl md:text-2xl inline-block">
-                Chinese New Year
+                Chinese New Year 2025
               </h3>
             </div>
             <img src="img/fire-cracker-unscreen.gif" class="cny-decorations" />
@@ -52,7 +52,6 @@
 
     <!-- Camera Section -->
     <a-scene
-      class="camera-wrapper"
       mindar-image="imageTargetSrc: targets.mind;uiScanning:no"
       color-space="sRGB"
       renderer="colorManagement: true"
