--- a/index.html
+++ b/index.html
@@ -10,48 +10,35 @@
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image.prod.js"></script>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image-aframe.prod.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
 
   <body>
-    <div class="absolute top-10 w-full">
-      <div class="flex items-center justify-center">
-        <div class="cny-container text-center">
-          <div class="flex justify-between items-center gap-2">
+    <div class="top-content">
+      <div class="content-wrapper">
+        <div class="cny-container">
+          <div class="greeting-container">
             <img src="img/fire-cracker-unscreen.gif" class="cny-decorations" />
-            <div>
-              <h1
-                class="cny-text text-3xl md:text-5xl mt-2 md:mt-6 inline-block"
-                id="rotating-greeting"
-              >
-                新年快乐
-              </h1>
-              <br />
-              <h3 class="mb-4 cny-text text-xl md:text-2xl inline-block">
-                Chinese New Year 2025
-              </h3>
+            <div class="greeting-text">
+              <h1 id="rotating-greeting">新年快乐</h1>
+              <h3>Chinese New Year</h3>
             </div>
             <img src="img/fire-cracker-unscreen.gif" class="cny-decorations" />
           </div>
-          <button class="cny-button block w-full hidden">Play Video</button>
+          <button class="cny-button">Play Video</button>
         </div>
       </div>
     </div>
 
-    <!-- Bottom lion dance -->
-    <div class="absolute w-full bottom-0">
-      <div class="flex items-center justify-center">
+    <div class="bottom-content">
+      <div class="lion-wrapper">
         <img src="img/lion-dance-unscreen.gif" class="cny-lion" />
       </div>
     </div>
 
-    <!-- Camera Section -->
     <a-scene
+      class="camera-scene"
       mindar-image="imageTargetSrc: targets.mind;uiScanning:no"
       color-space="sRGB"
       renderer="colorManagement: true"
