--- a/index.html
+++ b/index.html
@@ -11,7 +11,57 @@
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image-aframe.prod.js"></script>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js" defer></script>
+    <script>
+      const greetings = [
+        "蛇拿九稳",
+        "蛇分美满",
+        "蛇蛇如意",
+        "蛇么攏贺",
+        "蛇來福到",
+        "蛇全大補",
+        "蛇事顺心",
+        "蛇寿安康",
+        "蛇全大补",
+      ];
+
+      let currentIndex = 0;
+
+      function updateGreeting() {
+        const greetingElement = document.getElementById("rotating-greeting");
+        greetingElement.textContent = greetings[currentIndex];
+        currentIndex = (currentIndex + 1) % greetings.length;
+      }
+
+      window.addEventListener("load", () => {
+        updateGreeting();
+        setInterval(updateGreeting, 2000);
+      });
+
+      AFRAME.registerComponent("video-controller", {
+        init: function () {
+          const target = document.getElementById("target");
+          const btn = document.querySelector("button");
+          const video = document.getElementById("video");
+
+          target.addEventListener("targetFound", (event) => {
+            console.log("target found");
+            this.found = true;
+            video.play();
+          });
+
+          target.addEventListener("targetLost", (event) => {
+            console.log("target lost");
+            this.found = false;
+            video.pause();
+          });
+
+          btn.addEventListener("click", (event) => {
+            console.log("btn click");
+            if (this.found) video.play();
+          });
+        },
+      });
+    </script>
   </head>
 
   <body>
