#NA Update CNY Button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <img src="img/fire-cracker-unscreen.gif" class="cny-decorations" />
           </div>
-          <button class="cny-button">Play Video</button>
+          <button class="cny-button"></button>
         </div>
       </div>
     </div>
