--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <img src="img/fire-cracker-unscreen.gif" class="cny-decorations" />
             <div class="greeting-text">
               <h1 id="rotating-greeting">新年快乐</h1>
-              <h3>Chinese New Year</h3>
+              <h3>Chinese New Years</h3>
             </div>
             <img src="img/fire-cracker-unscreen.gif" class="cny-decorations" />
           </div>
