--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image.prod.js"></script>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.4/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <script>
       const greetings = [
@@ -83,7 +83,9 @@
 
     <div class="bottom-content">
       <div class="lion-wrapper">
+        <p class="bottom-content-text">Scan AngPau Packet Here</p>
         <img src="img/lion-dance-unscreen.gif" class="cny-lion" />
+        <p class="bottom-content-text">扫描红包封即可看到动画</p>
       </div>
     </div>
 
@@ -107,6 +109,15 @@
         rotation="0 0 0"
       ></a-camera>
       <a-entity id="target" mindar-image-target="targetIndex: 0">
+        <a-plane
+          class="clickable"
+          material="src: #video; opacity: 1;"
+          video-controller
+          height="2.5"
+          width="1.5"
+        ></a-plane>
+      </a-entity>
+      <a-entity id="target" mindar-image-target="targetIndex: 1">
         <a-plane
           class="clickable"
           material="src: #video; opacity: 1;"
