#NA Update Fam Version

--- a/family/index.html
+++ b/family/index.html
@@ -69,12 +69,18 @@
       <div class="content-wrapper">
         <div class="cny-container">
           <div class="greeting-container">
-            <img src="img/fire-cracker-unscreen.gif" class="cny-decorations" />
+            <img
+              src="../img/fire-cracker-unscreen.gif"
+              class="cny-decorations"
+            />
             <div class="greeting-text">
               <h1 id="rotating-greeting">新年快乐</h1>
               <h3>Chinese New Years</h3>
             </div>
-            <img src="img/fire-cracker-unscreen.gif" class="cny-decorations" />
+            <img
+              src="../img/fire-cracker-unscreen.gif"
+              class="cny-decorations"
+            />
           </div>
           <button class="cny-button"></button>
         </div>
@@ -84,7 +90,7 @@
     <div class="bottom-content">
       <div class="lion-wrapper">
         <p class="bottom-content-text">Scan AngPau Packet Here</p>
-        <img src="img/lion-dance-unscreen.gif" class="cny-lion" />
+        <img src="../img/lion-dance-unscreen.gif" class="cny-lion" />
         <p class="bottom-content-text">扫描红包封即可看到动画</p>
       </div>
     </div>
@@ -100,7 +106,7 @@
       raycaster="objects: .clickable"
     >
       <a-assets>
-        <video id="video" src="vid.mp4" preload loop="true"></video>
+        <video id="video" src="family.mp4" preload loop="true"></video>
       </a-assets>
 
       <a-camera
